@@ -1,5 +1,7 @@
 2005-10-10  Kouhei Sutou  <kou@cozmixng.org>
 
+	* packages/cairo/lib/cairo.rb: Remove deprecated API.
+	
 	* packages/cairo/ext/rb_cairo_matrix.c: Tidied cairo_matrix_t.
 	* packages/cairo/lib/cairo.rb: ditto.
 
